@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.9.2+build.206
 
 # Mod Properties
-	mod_version = 1.2.1
+	mod_version = 1.3.0
 	maven_group = net.fabricmc
 	archives_base_name = Age-Of-Exile-1.16.2
 
