@@ -1,0 +1,16 @@
+{
+  "name": "Perk/Skill Tree Reset Potion",
+  "category": "items",
+  "icon": "mmorpg:potions/reset_all_perks",
+  "sortnum": 0,
+  "pages": [
+	{  
+		"type": "text",   		
+		"text": "Resets your Skill Tree, allowing you to make a different build, choose different spells etc."
+	},  
+    {
+		"type": "crafting",
+		"recipe": "mmorpg:potions/reset_all_perks"   
+    }
+  ]
+}
