@@ -1,7 +1,7 @@
 {
   "schemaVersion": 1,
   "id": "mmorpg",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "name": "Age of Exile",
   "description": "Diablo in Minecraft!",
   "authors": [
